# ai-event-finder

./: docker-compose.yaml  pyproject.toml  run.py
app/: __init__.py  cli.py  constants.py  container.py  extensions.py
app/configuration/: config.py  logging_config.py
app/error_handler/: auth_exception_handlers.py  exceptions.py  global_error_handler.py
app/models/: event.py  user.py
app/repositories/: chat_history_repository.py  chat_history_repository_impl.py  event_repository.py  event_repository_impl.py  user_repository.py  user_repository_impl.py
app/routes/: app_route.py  event_route.py  login_route.py  user_route.py
app/schemas/: event_schema.py  user_schema.py
app/services/: app_service.py  app_service_impl.py  event_service.py  event_service_impl.py  user_service.py  user_service_impl.py
app/services/embedding/: embedding_service.py  embedding_service_impl.py
app/services/model/: model_service.py  model_service_impl.py
app/util/: event_util.py  format_event_util.py  model_util.py  test_jwt_token_util.py  transaction_util.py  user_util.py  validation_util.py
perf/locust/reports/: locust_report_stats_history.csv
tests/routes/: jwt_authentication_test.py
